--- a/index.html
+++ b/index.html
@@ -360,16 +360,16 @@
         <a href="" class="logo link"><span>Web</span>Studio</a>
         <address>
           <ul class="footer-contacts list">
-            <li class="footer-contacts-link">
+            <li class="">
               <a class="address">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer-contacts-link">
-              <a href="mailto:info@example.com" class="link"
+              <a href="mailto:info@example.com" class=" footer-contacts-link link"
                 >info@example.com</a
               >
             </li>
-            <li class="footer-contacts-link">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <li class="">
+              <a href="tel:+380961111111" class=" footer-contacts-link link">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
