--- a/portfolio.html
+++ b/portfolio.html
@@ -243,11 +243,11 @@
               <li class="footer-contacts-link">
                 <a class="address">г. Киев, пр-т Леси Украинки, 26</a>
               </li>
-              <li class="footer-contacts-link">
-                <a href="mailto:info@example.com" class="link">info@example.com</a>
+              <li class="">
+                <a href="mailto:info@example.com" class="footer-contacts-link link">info@example.com</a>
               </li>
-              <li class="footer-contacts-link">
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <li class="">
+                <a href="tel:+380961111111" class="footer-contacts-link link">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
