--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
   <body>
     <header>
       <div class="conteiner header-conteiner">
-        <nav class="header-nav">
+        <nav class="nav">
           <a href="" class="logo link"> <span>Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="header-nav-link">
-              <a href="" class="link current nav-link">Студия</a>
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a href="" class="link current nav__link">Студия</a>
             </li>
-            <li class="header-nav-link">
-              <a href="./portfolio.html" class="link nav-link">Портфолио</a>
+            <li class="nav__item">
+              <a href="./portfolio.html" class="link nav__link">Портфолио</a>
             </li>
-            <li class="header-nav-link">
-              <a href="" class="link nav-link">Контакты</a>
+            <li class="nav__item">
+              <a href="" class="link nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-contact list">
-            <li class="header-nav-link">
-                <a href="mailto:info@devstudio.com" class="link link-icon">
-                    <svg width="16" height="12" class="header-icon">
+        <ul class="contact list">
+            <li class="nav__item">
+                <a href="mailto:info@devstudio.com" class="link contact__link">
+                    <svg width="16" height="12" class="contact__icon">
                         <use href="./images/symbol-defs.svg#icon-envelope">
                         </use>
                     </svg>info@devstudio.com</a>
             </li>
-            <li class="header-nav-link">
-                                <a href="tel:+380961111111" class="link link-icon">
-                    <svg width="10" height="16" class="header-icon">
+            <li class="nav__item">
+                                <a href="tel:+380961111111" class="link contact__link">
+                    <svg width="10" height="16" class="contact__icon">
                         <use href="./images/symbol-defs.svg#icon-smartphone">
                         </use>
                     </svg>+38 096 111 11 11</a>
