--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="conteiner header-conteiner">
         <nav class="nav">
           <a href="" class="logo link"> <span>Web</span>Studio</a>
@@ -237,7 +237,7 @@
     <footer class="footer">
       <div class="conteiner footer-sections">
         <div class="join-left">
-          <a href="" class="logo link"><span>Web</span>Studio</a>
+          <a href="" class="logo footer-logo link"><span>Web</span>Studio</a>
           <address>
             <ul class="footer-contacts list">
               <li class="footer-contacts-link">
